🛠️ | Added invite.html and updated character guide - Added invite.html in French and English - Revamped character guide and styles to match with invite.html - Added new characters - Removed unnecessary JS

--- a/en/index.html
+++ b/en/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="mask-icon" href="../icon.svg" color="#0f00e0">
     <meta property="og:image" content="social.png">
-    <meta name="og:description" content="A project to organize all the custom amogi into an army!">
+    <meta name="description" content="A project to organize all the custom amogi into an army!">
     <script src="../main.js" async></script>
     <link rel="manifest" href="manifest.json">
   </head>
@@ -25,9 +25,6 @@
       </a>
     </section>
     <section id="two">
-      <p  class="line-image">
-        
-      </p>
 
       <!-- Table of contents -->
       <div id="content" align="center">
@@ -73,7 +70,7 @@
         <noscript>
           <div align="center" style="margin-top: 15px;"><b>❗ JavaScript is disabled on this browser: some features may not work correctly.</b></div>
         </noscript>
-        <a class="nounderline" href="https://github.com/Apix0n/Armus">
+        <a class="nounderline" href="https://github.com/apix0n/Armus">
           <div class="styled-btn color-en gh-button">
             <img src="../github-icon.svg" alt="GitHub icon">
             <div>View on GitHub</div>
@@ -104,12 +101,12 @@
       <!-- The army -->
       <div id="army">
         <h2>🔪 The army</h2>
-        <p align="center">Total number of members: <b class="ref">142</b></p>
+        <p align="center">Total number of members: <b class="ref">148</b></p>
         <div class="progressbar">
-          <div class="progressbar-inside" style="width: 94.6%">142/150</div>
+          <div class="progressbar-inside" style="width: 98.7%">148/150</div>
         </div>
         <p align="center">Clicking on a <b class="ref">golden</b> link will send you to the <code>🌟 Acknowledgements</code> of the artist.</p>
-        <table class="members-table" align=center>
+        <table class="members-table" align="center">
           <thead>
             <tr>
               <th>Name</th>
@@ -364,7 +361,7 @@
               <td><a href="../pics/cosmonus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
-              <td><a class="ref" href="#AN-Kookanonym">crashus</a></td>
+              <td><a class="ref" href="#AN-Kooki">crashus</a></td>
               <td>
                 <p><img src="../pics/crashus.jpeg"></p>
               </td>
@@ -441,6 +438,13 @@
               <td><a href="../pics/enormongus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
+              <td><a class="ref" href="#AN-XNinja">fifus</a></td>
+              <td>
+                <p><img src="../pics/fifus.jpeg"></p>
+              </td>
+              <td><a href="../pics/fifus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
               <td>fishus</td>
               <td>
                 <p><img src=../pics/fishus.jpeg></p>
@@ -453,6 +457,13 @@
                 <p><img src=../pics/flippus.jpeg></p>
               </td>
               <td><a href="../pics/flippus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td><a class="ref" href="#AN-Aliko">flopus</a></td>
+              <td>
+                <p><img src="../pics/flopus.jpeg"></p>
+              </td>
+              <td><a href="../pics/flopus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
               <td><a class="ref" href="#AN-Lili">fritus</a></td>
@@ -644,6 +655,13 @@
               <td><a href="../pics/luffus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
+              <td>lumogus</td>
+              <td>
+                <p><img src="../pics/lumogus.jpeg"></p>
+              </td>
+              <td><a href="../pics/lumogus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
               <td><a class="ref" href="#AN-Lili">maigrus</a></td>
               <td>
                 <p><img src="../pics/maigrus.jpeg"></p>
@@ -678,6 +696,20 @@
                 </p>
               </td>
               <td><a href="../pics/michael-jacksus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td>minecraftus</td>
+              <td>
+                <p><img src="../pics/minecraftus.jpeg"></p>
+              </td>
+              <td><a href="../pics/minecraftus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td><a class="ref" href="#AN-XNinja">monstrus</a></td>
+              <td>
+                <p><img src="../pics/monstrus.jpeg"></p>
+              </td>
+              <td><a href="../pics/monstrus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
               <td><a class="ref" href="#AN-Chus">musclus</a></td>
@@ -834,7 +866,7 @@
               <td><a href="../pics/poulus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
-              <td><a class="ref" href="#AN-Kookanonym">questionus</a></td>
+              <td><a class="ref" href="#AN-Kooki">questionus</a></td>
               <td>
                 <p><img src="../pics/questionus.jpeg"></p>
               </td>
@@ -979,6 +1011,13 @@
                 <p><img src=../pics/tchoupius.jpeg></p>
               </td>
               <td><a href="../pics/tchoupius.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td><a class="ref" href="#AN-Kooki">tetrus</a></td>
+              <td>
+                <p><img src="../pics/tetrus.jpeg"></p>
+              </td>
+              <td><a href="../pics/tetrus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
               <td><a class="ref" href="#AN-Chus">the-creatorus</a></td>
@@ -1130,7 +1169,7 @@
           <li> you want to delete a character, </li>
         </ul>
         <p>Please create an issue with the right template.</p>
-        <a href="https://github.com/Apix0n/Armus/issues/new/choose" target="_blank" class="nounderline">
+        <a href="https://github.com/apix0n/Armus/issues/new/choose" target="_blank" class="nounderline">
           <div class="styled-btn text-btn color-en">
             <div>Create an issue</div>
           </div>
@@ -1142,11 +1181,18 @@
       <div id="character">
         <h2>🎨 Create a character</h2>
         <p>In order to create a character without making mistakes, to have the necessary pics and to send it in the Armus, click on the button below to open the guide.</p>
-        <a href="character.html" class="nounderline">
+        <a href="character" class="nounderline">
           <div class="styled-btn text-btn color-en">
             <div>The guide: How to create a character ?</div>
           </div>
         </a>
+        <p>Invite someone to join Armus:</p>
+        <div class="inputandshare">
+          <input class="text-input" type="text" placeholder="Your username" spellcheck="false" autocorrect="off" minlength="3" maxlength="15" title="Your name should be between 3 and 15 characters" id="invitername-input">
+          <div class="styled-btn color-en onlymir-btn" onclick="shareInvite()">
+            <span class="material-icons-round">share</span>
+          </div>
+        </div>
         <div class="spaceline"></div>
       </div>
 
@@ -1156,22 +1202,22 @@
         <p>Thanks to the <b class="ref">23</b> artists:</p>
         <!--* AN = Artist name -->
         <ul class="remerciements">
-          <li id="AN-Apix"><b class="ref3">🌹 <a href="https://github.com/Apix0n" target="_blank" title="Check out @Apix0n on GitHub">Apix</a></b> (me) for all the characters with the white name,</li>
+          <li id="AN-Apix"><b class="ref3">🌹 <a href="https://github.com/apix0n" target="_blank" title="Check out @apix0n on GitHub">Apix</a></b> (me) for all the characters with the white name,</li>
           <li id="AN-Chus"><b class="ref2">💎 Chus</b> who, in addition to being the person I had the idea with, created <code>amoga</code>, <code>amogus-poli</code>, <code>bananus</code>, <code>blackus</code>, <code>chinus</code>, <code>cuistus</code>, <code>educatus</code>, <code>galaxus</code>, <code>generalus</code>, <code>gokus</code>, <code>impostor</code>, <code>infirmus</code>, <code>laserus</code>, <code>livrus</code>, <code>michael-jacksus</code>, <code>musclus</code>, <code>naturus</code>, <code>ninjsus</code>, <code>perdus</code>, <code>piratus</code>, <code>poulus</code>, <code>seinsus</code>, <code>the-creatorus</code>, <code>thugus</code> and <code>vampirus</code>,</li>
-          <li id="AN-XNinja"><b class="ref">👑 <a href="https://github.com/XNinjaYmZ" target="_blank" title="Check out @XNinjaYmZ on GitHub">XNinja</a></b> for <code>abeillus</code>, <code>applus</code>, <code>asus</code>, <code>contrairus</code>, <code>diamonda</code>, <code>gameus</code>, <code>kebabus</code>, <code>marius</code>, <code>pacmanus</code>, <code>pokebollus</code>, <code onclick="rick()" class="ricklink">rickus</code>, <code>stevus</code>, <code>stickmus</code>, <code>trollus</code>, <code>uranus</code> and <code>wizardus <a href=https://github.com/Apix0n/Armus/issues/7 target="_blank" class="idea-gh-label">#7</a></code>,</li>
+          <li id="AN-XNinja"><b class="ref">👑 <a href="https://github.com/XNinjaYmZ" target="_blank" title="Check out @XNinjaYmZ on GitHub">XNinja</a></b> for <code>abeillus</code>, <code>applus</code>, <code>asus</code>, <code>contrairus</code>, <code>diamonda</code>, <code>fifus</code>, <code>gameus</code>, <code>kebabus</code>, <code>marius</code>, <code>monstrus</code>, <code>pacmanus</code>, <code>pokebollus</code>, <code onclick="rick()" class="ricklink">rickus</code>, <code>stevus</code>, <code>stickmus</code>, <code>trollus</code>, <code>uranus</code> and <code>wizardus <a href=https://github.com/apix0n/Armus/issues/7 target="_blank" class="idea-gh-label">#7</a></code>,</li>
           <li id="AN-Ilian"><b>Ilian</b> for <code>drogueus</code>, <code>killus</code>, <code>mysterus</code>, <code>narutus</code>, <code>robotus</code>, <code>sofianus</code>, <code>spidermanus</code> and <code>vegetus</code>,</li>
           <li id="AN-Jujudubat7"><b>Jujudubat7</b> for <code>chaplinus</code>,</li>
           <li id="AN-EVIL-UO"><b>EVIL UO</b> for <code>luffus</code> and <code>nymarus</code>,</li>
           <li id="AN-Camicase"><b>Camicase</b> for <code>helicoptus</code> and <code>sleepus</code>,</li>
-          <li id="AN-Aliko"><b class="ref2">💎 Aliko</b> for <code>babacus</code>, <code>coca-colus</code>, <code>demonus</code>, <code>dora</code>, <code>eclairus</code>, <code>grogus</code>, <code>hakimus</code>, <code>icecreamus</code>, <code>intellus</code>, <code>japnessa</code>, <code>mbappus</code>, <code>nutellus</code>, <code>peppus</code>, <code>racaillus</code>, <code>robloxus</code>, <code>rockus</code>, <code>tchoupius</code>, <code>tornadus</code>, <code>xdsus</code> and <code>yoyosus</code>,</li>
+          <li id="AN-Aliko"><b class="ref2">💎 Aliko</b> for <code>babacus</code>, <code>coca-colus</code>, <code>demonus</code>, <code>dora</code>, <code>eclairus</code>, <code>flopus</code>, <code>grogus</code>, <code>hakimus</code>, <code>icecreamus</code>, <code>intellus</code>, <code>japnessa</code>, <code>mbappus</code>, <code>nutellus</code>, <code>peppus</code>, <code>racaillus</code>, <code>robloxus</code>, <code>rockus</code>, <code>tchoupius</code>, <code>tornadus</code>, <code>xdsus</code> and <code>yoyosus</code>,</li>
           <li id="AN-Lili"><b>Lili</b> for <code>amosus</code>, <code>bakacutea</code>, <code>fritus</code>, <code>maigrus</code>, <code>polisus</code> and <code>turkus</code>,</li>
           <li id="AN-Petiteprincesse"><b>Petiteprincesse</b> for <code>pikachus</code> and <code>rainbowus</code>,</li>
           <li id="AN-Apyzzelos"><b><a href="https://github.com/Apyzzelos" target="_blank" title="Check out @Apyzzelos on GitHub">Apyzzelos</a></b> for <code>hamburgus</code>,</li>
-          <li id="AN-Samilogosy"><b>Samilogosy</b> for <code>capturus</code> and <code>shrekus</code>,</li>
+          <li id="AN-Samilogosy"><b>Samilogosy</b> for <code>capturus</code>, <code>recepus</code> and <code>shrekus</code>,</li>
           <li id="AN-K-Y"><b>K.Y</b> for <code>theamosus78</code>,</li>
           <li id="AN-ID-CLAS"><b>ID_CLAS</b> for <code>arabus</code>,</li>
           <li id="AN-ceriban176"><b>ceriban176</b> for <code>louivitus</code> et <code>roitus</code>,</li>
-          <li id="AN-Nissou"><b class="ref">👑 <a href="https://github.com/niss0u" target="_blank" title="Check out @niss0u on GitHub">Nissou</a></b> for <code>abatus <a href=https://github.com/Apix0n/Armus/issues/17 target="_blank">#17</a></code>, <code>angelus <a href=https://github.com/Apix0n/Armus/issues/24 target="_blank">#24</a></code>, <code>bitmojus <a href=https://github.com/Apix0n/Armus/issues/28 target="_blank">#28</a></code>, <code>cupidus <a href=https://github.com/Apix0n/Armus/issues/27 target="_blank">#27</a></code>, <code>goblinus <a href=https://github.com/Apix0n/Armus/issues/21 target="_blank">#21</a></code>, <code>invisiblus <a href=https://github.com/Apix0n/Armus/issues/23 target="_blank">#23</a></code>, <code>panterus <a href=https://github.com/Apix0n/Armus/issues/18 target="_blank">#18</a></code>, <code>papillus <a href=https://github.com/Apix0n/Armus/issues/25 target="_blank">#25</a></code>, <code>superherus <a href=https://github.com/Apix0n/Armus/issues/26 target="_blank">#26</a></code>, <code>voitus <a href="https://github.com/Apix0n/Armus/issues/29" target="_blank">#29</a></code> and <code>werbrus <a href=https://github.com/Apix0n/Armus/issues/20 target="_blank">#20</a></code>,</li>
+          <li id="AN-Nissou"><b class="ref">👑 <a href="https://github.com/niss0u" target="_blank" title="Check out @niss0u on GitHub">Nissou</a></b> for <code>abatus <a href=https://github.com/apix0n/Armus/issues/17 target="_blank">#17</a></code>, <code>angelus <a href=https://github.com/apix0n/Armus/issues/24 target="_blank">#24</a></code>, <code>bitmojus <a href=https://github.com/apix0n/Armus/issues/28 target="_blank">#28</a></code>, <code>cupidus <a href=https://github.com/apix0n/Armus/issues/27 target="_blank">#27</a></code>, <code>goblinus <a href=https://github.com/apix0n/Armus/issues/21 target="_blank">#21</a></code>, <code>invisiblus <a href=https://github.com/apix0n/Armus/issues/23 target="_blank">#23</a></code>, <code>panterus <a href=https://github.com/apix0n/Armus/issues/18 target="_blank">#18</a></code>, <code>papillus <a href=https://github.com/apix0n/Armus/issues/25 target="_blank">#25</a></code>, <code>superherus <a href=https://github.com/apix0n/Armus/issues/26 target="_blank">#26</a></code>, <code>voitus <a href="https://github.com/apix0n/Armus/issues/29" target="_blank">#29</a></code> and <code>werbrus <a href=https://github.com/apix0n/Armus/issues/20 target="_blank">#20</a></code>,</li>
           <li id="AN-Goku"><b>Goku</b> for <code>maya</code> and <code>zorus</code>,</li>
           <li id="AN-Abat"><b>Abat</b> for <code>paintus</code>,</li>
           <li id="AN-Ducky-duck"><b>Ducky duck</b> for <code>ahmonzbobus</code>,</li>
@@ -1187,8 +1233,8 @@
           <li><b class="ref3">🌹 Artist</b>: More than 30 characters</li>
         </ul>
         <ul>
-          <li><code>... <a href="#" class="addchar-gh-label">#00</a></code>: Character addition</li>
-          <li><code>... <a href="#" class="idea-gh-label">#00</a></code>: Idea</li>
+          <li><code>... <a href="" class="addchar-gh-label">#00</a></code>: Character addition</li>
+          <li><code>... <a href="" class="idea-gh-label">#00</a></code>: Idea</li>
         </ul>
         <p>Translation:</p>
         <ul>
@@ -1215,7 +1261,7 @@
     <section id="three">
       <div class="navbar">
         <ul>
-          <li><a href="https://github.com/Apix0n" target="_blank"><img src="/apix-logo.svg" class="svgicon"> Created by Apix with ❤ | 2022-2023</a></li>
+          <li><a href="https://github.com/apix0n" target="_blank"><img src="../apix-logo.svg" class="svgicon"><img src="../apix-logo.svg" class="svgicon"> Created by Apix with ❤️ | 2022-2023</a></li>
         </ul>
       </div>
     </section>
