--- a/tr/index.html
+++ b/tr/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="mask-icon" href="../icon.svg" color="#f52626">
     <meta property="og:image" content="social.png">
-    <meta name="og:description" content="Tüm özel amogi bir orduya organize etmek için bir proje!">
+    <meta name="description" content="Tüm özel amogi bir orduya organize etmek için bir proje!">
     <script src="../main.js" async></script>
     <link rel="manifest" href="manifest.json">
   </head>
@@ -68,10 +68,9 @@
         <h2>📝 Bilgiler</h2>
         <div align="center"><b>Armus, tüm özel amogi bir orduda organize etmek için arkadaşlarla oluşturulan GitHubde  barındırılan bir projedir.</b></div>
         <noscript>
-          <div align="center" style="margin-top: 15px;"><b>❗ JavaScript bu tarayıcıda devre dışıdır: bazı özellikler çalışmayabilir
-          </b></div>
+          <div align="center" style="margin-top: 15px;"><b>❗ JavaScript bu tarayıcıda devre dışıdır: bazı özellikler çalışmayabilir</b></div>
         </noscript>
-        <a class="nounderline" href="https://github.com/Apix0n/Armus">
+        <a class="nounderline" href="https://github.com/apix0n/Armus">
           <div class="styled-btn color-tr gh-button">
             <img src="../github-icon.svg" alt="GitHub icon">
             <div>GitHub'da gör</div>
@@ -102,12 +101,12 @@
       <!-- The army -->
       <div id="army">
         <h2>🔪 Ordu</h2>
-        <p align="center">Toplam üye sayısı: <b class="ref">142</b></p>
+        <p align="center">Toplam üye sayısı: <b class="ref">148</b></p>
         <div class="progressbar">
-          <div class="progressbar-inside" style="width: 94.6%">142/150</div>
+          <div class="progressbar-inside" style="width: 98.7%">148/150</div>
         </div>
         <p align="center"><b class="ref">Altın</b> olan bir isim tıklayarak sizi sanatçının <code>⭐ Teşekkürlerine</code> yönlendirecektir.</p>
-        <table class="members-table" align=center>
+        <table class="members-table" align="center">
           <thead>
             <tr>
               <th>Ad</th>
@@ -362,7 +361,7 @@
               <td><a href="../pics/cosmonus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
-              <td><a class="ref" href="#AN-Kookanonym">crashus</a></td>
+              <td><a class="ref" href="#AN-Kooki">crashus</a></td>
               <td>
                 <p><img src="../pics/crashus.jpeg"></p>
               </td>
@@ -439,6 +438,13 @@
               <td><a href="../pics/enormongus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
+              <td><a class="ref" href="#AN-XNinja">fifus</a></td>
+              <td>
+                <p><img src="../pics/fifus.jpeg"></p>
+              </td>
+              <td><a href="../pics/fifus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
               <td>fishus</td>
               <td>
                 <p><img src=../pics/fishus.jpeg></p>
@@ -451,6 +457,13 @@
                 <p><img src=../pics/flippus.jpeg></p>
               </td>
               <td><a href="../pics/flippus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td><a class="ref" href="#AN-Aliko">flopus</a></td>
+              <td>
+                <p><img src="../pics/flopus.jpeg"></p>
+              </td>
+              <td><a href="../pics/flopus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
               <td><a class="ref" href="#AN-Lili">fritus</a></td>
@@ -642,6 +655,13 @@
               <td><a href="../pics/luffus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
+              <td>lumogus</td>
+              <td>
+                <p><img src="../pics/lumogus.jpeg"></p>
+              </td>
+              <td><a href="../pics/lumogus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
               <td><a class="ref" href="#AN-Lili">maigrus</a></td>
               <td>
                 <p><img src="../pics/maigrus.jpeg"></p>
@@ -676,6 +696,20 @@
                 </p>
               </td>
               <td><a href="../pics/michael-jacksus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td>minecraftus</td>
+              <td>
+                <p><img src="../pics/minecraftus.jpeg"></p>
+              </td>
+              <td><a href="../pics/minecraftus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td><a class="ref" href="#AN-XNinja">monstrus</a></td>
+              <td>
+                <p><img src="../pics/monstrus.jpeg"></p>
+              </td>
+              <td><a href="../pics/monstrus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
               <td><a class="ref" href="#AN-Chus">musclus</a></td>
@@ -832,7 +866,7 @@
               <td><a href="../pics/poulus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
-              <td><a class="ref" href="#AN-Kookanonym">questionus</a></td>
+              <td><a class="ref" href="#AN-Kooki">questionus</a></td>
               <td>
                 <p><img src="../pics/questionus.jpeg"></p>
               </td>
@@ -977,6 +1011,13 @@
                 <p><img src=../pics/tchoupius.jpeg></p>
               </td>
               <td><a href="../pics/tchoupius.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td><a class="ref" href="#AN-Kooki">tetrus</a></td>
+              <td>
+                <p><img src="../pics/tetrus.jpeg"></p>
+              </td>
+              <td><a href="../pics/tetrus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
               <td><a class="ref" href="#AN-Chus">the-creatorus</a></td>
@@ -1128,7 +1169,7 @@
           <li> bir karakteri silmek istiyorsanız, </li>
         </ul>
         <p>Lütfen doğru modeli seçerek bir sorun oluşturun.</p>
-        <a href="https://github.com/Apix0n/Armus/issues/new/choose" target="_blank" class="nounderline">
+        <a href="https://github.com/apix0n/Armus/issues/new/choose" target="_blank" class="nounderline">
           <div class="styled-btn text-btn color-tr">
             <div>Bir sorun oluştur</div>
           </div>
@@ -1140,11 +1181,18 @@
       <div id="character">
         <h2>🎨 Bir karakter yarat</h2>
         <p>Hata yapmadan karakter oluşturmak, gerekli dosyalara indirlemek ve Armus'a göndermek için aşağıdaki düğme tıklayarak rehberi açabilirsiniz.</p>
-        <a href="../en/character.html?lang=tr" class="nounderline">
+        <a href="../en/character" class="nounderline">
           <div class="styled-btn text-btn color-tr">
             <div>Rehber: bir karakter nasıl oluşturulur ? (İngilizce)</div>
           </div>
         </a>
+        <p>Birini Armus'a katılmaya davet et (İngilizce):</p>
+        <div class="inputandshare">
+          <input class="text-input" type="text" placeholder="Kullancı adınız" spellcheck="false" autocorrect="off" minlength="3" maxlength="15" title="Votre nom doit être entre 3 et 15 caractères" title="Adınız 3 ila 15 karakter arasında olmalıdır" id="invitername-input">
+          <div class="styled-btn color-tr onlymir-btn" onclick="shareInviteEnglish()">
+            <span class="material-icons-round">share</span>
+          </div>
+        </div>
         <div class="spaceline"></div>
       </div>
 
@@ -1154,26 +1202,26 @@
         <p><b class="ref">23</b> sanatçılara teşekkürler:</p>
         <!--* AN = Artist name -->
         <ul class="remerciements">
-          <li id="AN-Apix"><b class="ref3">🌹 <a href="https://github.com/Apix0n" target="_blank" title="GitHub'da @Apix0n'e göz atın">Apix</a></b> (ben), beyaz bir ad olan tüm karakterler için,</li>
+          <li id="AN-Apix"><b class="ref3">🌹 <a href="https://github.com/apix0n" target="_blank" title="GitHub'da @Apix0n'e göz atın">Apix</a></b> (ben), beyaz bir ad olan tüm karakterler için,</li>
           <li id="AN-Chus"><b class="ref2">💎 Chus</b> fikre sahip olduğum kiși olmanın yanı sıra ve <code>amoga</code>, <code>amogus-poli</code>, <code>bananus</code>, <code>blackus</code>, <code>chinus</code>, <code>cuistus</code>, <code>educatus</code>, <code>galaxus</code>, <code>generalus</code>, <code>gokus</code>, <code>impostor</code>, <code>infirmus</code>, <code>laserus</code>, <code>livrus</code>, <code>michael-jacksus</code>, <code>musclus</code>, <code>naturus</code>, <code>ninjsus</code>, <code>perdus</code>, <code>piratus</code>, <code>poulus</code>, <code>seinsus</code>, <code>the-creatorus</code>, <code>thugus</code> ve <code>vampirus</code> yarattıǧını için,</li>
-          <li id="AN-XNinja"><b class="ref">👑 <a href="https://github.com/XNinjaYmZ" target="_blank" title="GitHub'da @XNinjaYmZ'ye göz atın">XNinja</a></b> <code>abeillus</code>, <code>applus</code>, <code>asus</code>, <code>contrairus</code>, <code>diamonda</code>, <code>gameus</code>, <code>kebabus</code>, <code>marius</code>, <code>pacmanus</code>, <code>pokebollus</code>, <code onclick="rick()" class="ricklink">rickus</code>, <code>stevus</code>, <code>stickmus</code>, <code>trollus</code>, <code>uranus</code> ve <code>wizardus <a href=https://github.com/Apix0n/Armus/issues/7 target="_blank" class="idea-gh-label">#7</a></code> için,</li>
+          <li id="AN-XNinja"><b class="ref">👑 <a href="https://github.com/XNinjaYmZ" target="_blank" title="GitHub'da @XNinjaYmZ'ye göz atın">XNinja</a></b> <code>abeillus</code>, <code>applus</code>, <code>asus</code>, <code>contrairus</code>, <code>diamonda</code>, <code>fifus</code>, <code>gameus</code>, <code>kebabus</code>, <code>marius</code>, <code>monstrus</code>, <code>pacmanus</code>, <code>pokebollus</code>, <code onclick="rick()" class="ricklink">rickus</code>, <code>stevus</code>, <code>stickmus</code>, <code>trollus</code>, <code>uranus</code> ve <code>wizardus <a href=https://github.com/apix0n/Armus/issues/7 target="_blank" class="idea-gh-label">#7</a></code> için,</li>
           <li id="AN-Ilian"><b>Ilian</b> <code>drogueus</code>, <code>killus</code>, <code>mysterus</code>, <code>narutus</code>, <code>robotus</code>, <code>sofianus</code>, <code>spidermanus</code> ve <code>vegetus</code> için,</li>
           <li id="AN-Jujudubat7"><b>Jujudubat7</b> <code>chaplinus</code> için,</li>
           <li id="AN-EVIL-UO"><b>EVIL UO</b> <code>luffus</code> ve <code>nymarus</code> için,</li>
           <li id="AN-Camicase"><b>Camicase</b> <code>helicoptus</code> ve <code>sleepus</code> için,</li>
-          <li id="AN-Aliko"><b class="ref2">💎 Aliko</b> <code>babacus</code>, <code>coca-colus</code>, <code>demonus</code>, <code>dora</code>, <code>eclairus</code>, <code>grogus</code>, <code>hakimus</code>, <code>icecreamus</code>, <code>intellus</code>, <code>japnessa</code>, <code>mbappus</code>, <code>nutellus</code>, <code>peppus</code>, <code>racaillus</code>, <code>robloxus</code>, <code>rockus</code>, <code>tchoupius</code>, <code>tornadus</code>, <code>xdsus</code> ve <code>yoyosus</code>için,</li>
+          <li id="AN-Aliko"><b class="ref2">💎 Aliko</b> <code>babacus</code>, <code>coca-colus</code>, <code>demonus</code>, <code>dora</code>, <code>eclairus</code>, <code>flopus</code>, <code>grogus</code>, <code>hakimus</code>, <code>icecreamus</code>, <code>intellus</code>, <code>japnessa</code>, <code>mbappus</code>, <code>nutellus</code>, <code>peppus</code>, <code>racaillus</code>, <code>robloxus</code>, <code>rockus</code>, <code>tchoupius</code>, <code>tornadus</code>, <code>xdsus</code> ve <code>yoyosus</code>için,</li>
           <li id="AN-Lili"><b>Lili</b> <code>amosus</code>, <code>bakacutea</code>, <code>fritus</code>, <code>maigrus</code>, <code>polisus</code> ve <code>turkus</code> için,</li>
           <li id="AN-Petiteprincesse"><b>Petiteprincesse</b> <code>pikachus</code> ve <code>rainbowus</code> için,</li>
           <li id="AN-Apyzzelos"><b><a href="https://github.com/Apyzzelos" target="_blank" title="GitHub'da @Apyzzelos'a göz atın">Apyzzelos</a></b> <code>hamburgus</code> için,</li>
-          <li id="AN-Samilogosy"><b>Samilogosy</b> <code>capturus</code> ve <code>shrekus</code> için,</li>
+          <li id="AN-Samilogosy"><b>Samilogosy</b> <code>capturus</code>, <code>recepus</code> ve <code>shrekus</code> için,</li>
           <li id="AN-K-Y"><b>K.Y</b> <code>theamosus78</code> için,</li>
           <li id="AN-ID-CLAS"><b>ID_CLAS</b> <code>arabus</code> için,</li>
           <li id="AN-ceriban176"><b>ceriban176</b> <code>louivitus</code> ve <code>roitus</code> için,</li>
-          <li id="AN-Nissou"><b class="ref">👑 <a href="https://github.com/niss0u" target="_blank" title="GitHub'da @niss0u'ya göz atın">Nissou</a></b> <code>abatus <a href=https://github.com/Apix0n/Armus/issues/17 target="_blank">#17</a></code>, <code>angelus <a href=https://github.com/Apix0n/Armus/issues/24 target="_blank">#24</a></code>, <code>bitmojus <a href=https://github.com/Apix0n/Armus/issues/28 target="_blank">#28</a></code>, <code>cupidus <a href=https://github.com/Apix0n/Armus/issues/27 target="_blank">#27</a></code>, <code>goblinus <a href=https://github.com/Apix0n/Armus/issues/21 target="_blank">#21</a></code>, <code>invisiblus <a href=https://github.com/Apix0n/Armus/issues/23 target="_blank">#23</a></code>, <code>panterus <a href=https://github.com/Apix0n/Armus/issues/18 target="_blank">#18</a></code>, <code>papillus <a href=https://github.com/Apix0n/Armus/issues/25 target="_blank">#25</a></code>, <code>superherus <a href=https://github.com/Apix0n/Armus/issues/26 target="_blank">#26</a></code>, <code>voitus <a href="https://github.com/Apix0n/Armus/issues/29" target="_blank">#29</a></code> ve <code>werbrus <a href=https://github.com/Apix0n/Armus/issues/20 target="_blank">#20</a></code> için,</li>
+          <li id="AN-Nissou"><b class="ref">👑 <a href="https://github.com/niss0u" target="_blank" title="GitHub'da @niss0u'ya göz atın">Nissou</a></b> <code>abatus <a href=https://github.com/apix0n/Armus/issues/17 target="_blank">#17</a></code>, <code>angelus <a href=https://github.com/apix0n/Armus/issues/24 target="_blank">#24</a></code>, <code>bitmojus <a href=https://github.com/apix0n/Armus/issues/28 target="_blank">#28</a></code>, <code>cupidus <a href=https://github.com/apix0n/Armus/issues/27 target="_blank">#27</a></code>, <code>goblinus <a href=https://github.com/apix0n/Armus/issues/21 target="_blank">#21</a></code>, <code>invisiblus <a href=https://github.com/apix0n/Armus/issues/23 target="_blank">#23</a></code>, <code>panterus <a href=https://github.com/apix0n/Armus/issues/18 target="_blank">#18</a></code>, <code>papillus <a href=https://github.com/apix0n/Armus/issues/25 target="_blank">#25</a></code>, <code>superherus <a href=https://github.com/apix0n/Armus/issues/26 target="_blank">#26</a></code>, <code>voitus <a href="https://github.com/apix0n/Armus/issues/29" target="_blank">#29</a></code> ve <code>werbrus <a href=https://github.com/apix0n/Armus/issues/20 target="_blank">#20</a></code> için,</li>
           <li id="AN-Goku"><b>Goku</b> <code>maya</code> ve <code>zorus</code> için,</li>
           <li id="AN-Abat"><b>Abat</b> <code>paintus</code> için,</li>
           <li id="AN-Ducky-duck"><b>Ducky duck</b> <code>ahmonzbobus</code> için,</li>
-          <li id="AN-Kookanonym"><b>Kookanonym</b> <code>crashus</code> ve <code>questionus</code> için,</li>
+          <li id="AN-Kooki"><b>Kooki</b> <code>crashus</code>, <code>questionus</code> ve <code>tetrus</code> için,</li>
           <li id="AN-Benjaminouille"><b>Benjaminouille</b> <code>enormongus</code> ve <code>villajus</code> için,</li>
           <li id="AN-Jiwon"><b>Jiwon</b> <code>gourdus</code> için,</li>
           <li id="AN-GaimeLeZuitres"><b>GaimeLéZuitres</b> <code>tacus</code> için,</li>
@@ -1185,8 +1233,8 @@
           <li><b class="ref3">🌹 Sanatçı</b>: 30 karakterden fazla</li>
         </ul>
         <ul>
-          <li><code>... <a href="#" class="addchar-gh-label">#00</a></code>: Karakter ekleme</li>
-          <li><code>... <a href="#" class="idea-gh-label">#00</a></code>: Fikir</li>
+          <li><code>... <a href="" class="addchar-gh-label">#00</a></code>: Karakter ekleme</li>
+          <li><code>... <a href="" class="idea-gh-label">#00</a></code>: Fikir</li>
         </ul>
         <p>Çeviri:</p>
         <ul>
@@ -1213,7 +1261,7 @@
     <section id="three">
       <div class="navbar">
         <ul>
-          <li><a href="https://github.com/Apix0n" target="_blank"><img src="/apix-logo.svg" class="svgicon"> Apix tarafından ❤️ ile oluşturuldu | 2022-2023</a></li>
+          <li><a href="https://github.com/apix0n" target="_blank"><img src="../apix-logo.svg" class="svgicon"> Apix tarafından ❤️ ile oluşturuldu | 2022-2023</a></li>
         </ul>
       </div>
     </section>
